--- a/style.css
+++ b/style.css
@@ -1,7 +1,33 @@
 body {
     background-color: #2b63ca;
+    margin: 0px;
 }
 
-h1 {
-    color: rgb(akçsdf)
+.title {
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.container{
+    position: absolute;
+}
+
+.face {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-color: #f8c211;    
+}
+
+footer{
+    height: 0px;
+    position: relative;
+    color: white;
+    font-family: 'My Soul', cursive;
+    margin: 0px;
 }
