--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    justify-content: center;
     background-color: #2b63ca;
     margin: 0px;
 }
@@ -14,14 +15,32 @@ body {
 }
 
 .face {
+    justify-content: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flexbox;
     width: 400px;
     height: 400px;
     border-radius: 50%;
     background-color: #f8c211;    
+}
+
+.eye-space-right{
+    left: 0%;
+    top: 0%;
+    width: 200px;
+    height: 200px;
+    position: relative;
+}
+
+.eye-space-left {
+    left: 50%;
+    top: -50%;
+    width: 200px;
+    height: 200px;
+    position: relative;
 }
 
 footer{
