--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@ body {
 
 .title {
     color: white;
-    font-family: sans-serif;
+    font-family: Helvetica;
     text-align: center;
+    font-size: 60px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #000;
 }
 
 .container{
@@ -24,7 +27,9 @@ body {
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    background-color: #f8c211;    
+    background-color: #f8c211;
+    border: 5px solid black;
+    box-shadow: 5px 7px 10px rgb(45, 26, 153); 
 }
 
 .eye-space-right{
@@ -36,7 +41,7 @@ body {
 }
 .eye-right {
     width: 50px;
-    height: 75px;
+    height: 100px;
     border-radius: 50%;
     transform: translate(50%, 50%);
     position: absolute;
@@ -55,7 +60,7 @@ body {
 
 .eye-left {
     width: 50px;
-    height: 75px;
+    height: 100px;
     border-radius: 50%;
     transform: translate(50%, 50%);
     position: absolute;
@@ -72,13 +77,24 @@ body {
     position: absolute;
 }
 
-.mouth {
-    z-index: 1;
+.mouth-right-size {
     top: 0%;
-    right: 50%;
-    height: 80px;
-    width: 250px;
-    border-radius: 0 0 200px 200px;
+    left: 2%;
+    height: 90px;
+    width: 130px;
+    border-bottom-left-radius: 100%;
+    margin: 0 auto;
+    transform: translate(50%, 50%);
+    position: absolute;
+    background-color: black;
+}
+
+.mouth-left-size {
+    top: 0%;
+    right: 33%;
+    height: 90px;
+    width: 130px;
+    border-bottom-right-radius: 100%;
     margin: 0 auto;
     transform: translate(50%, 50%);
     position: absolute;
@@ -86,9 +102,12 @@ body {
 }
 
 footer{
-    height: 0px;
-    position: relative;
-    color: white;
+    top: 90%;
+    left: 2%;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    opacity: 50%;
     font-family: 'My Soul', cursive;
+    font-size: 25px;
     margin: 0px;
 }
